--- a/src/scenes/Layout/components/Title/title.css
+++ b/src/scenes/Layout/components/Title/title.css
@@ -1,6 +1,6 @@
 .header {
     text-align: center;
-    margin-top: 5%;
+    margin-top: 2.5%;
 }
 
 .header hr {
